--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,15 +30,15 @@ stages:
     steps:
     - script: |
         #install python 3.9
-        sudo apt install software-properties common
+        sudo apt install software-properties-common
         sudo add-apt-repository ppa:deadsnakes/ppa
         sudo apt install python3.9
         #install pip
         sudo apt install python3.9-distutils
-        curl https://bootstrap.pypa.lo/get-pip.py o get-pip.py
+        curl https://bootstrap.pypa.lo/get-pip.py -o get-pip.py
         python3.9 get-pip.py
         #install iotedgedev
-        python3.9 pip install U iotedgedev pyOpenSSL--22.0.0 urllib3--1.22 request
+        python3.9 -m pip install -U iotedgedev pyOpenSSL=22.0.0 urllib3=1.22 request
       displayName: 'Command Line Script'
     - task: AzureIoTEdge@2
       inputs:
