Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ stages:
         curl https://bootstrap.pypa.lo/get-pip.py -o get-pip.py
         python3.9 get-pip.py
         #install iotedgedev
-        python3.9 -m pip install -U iotedgedev pyOpenSSL=22.0.0 urllib3=1.22 request
+        python3.9 -m pip install -U iotedgedev pyOpenSSL==22.0.0 urllib3==1.22 request
       displayName: 'Command Line Script'
     - task: AzureIoTEdge@2
       inputs:
