--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
         sudo apt install python3.8
         #install pip
         sudo apt install python3.8-distutils
-        curl https://bootstrap.pypa.io/pip/3.8/get-pip.py -o get-pip.py
+        curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
         python3.8 get-pip.py
         #install iotedgedev
         python3.8 -m pip install -U iotedgedev pyOpenSSL==22.0.0 urllib3==1.22 request
