--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,16 +29,16 @@ stages:
       vmImage: ubuntu-22.04
     steps:
     - script: |
-        #install python 3.8
+        #install python 3.9
         sudo apt install software-properties-common
         sudo add-apt-repository ppa:deadsnakes/ppa
-        sudo apt install python3.8
+        sudo apt install python3.9
         #install pip
-        sudo apt install python3.8-distutils
+        sudo apt install python3.9-distutils
         curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-        python3.8 get-pip.py
+        python3.9 get-pip.py
         #install iotedgedev
-        python3.8 -m pip install -U iotedgedev pyOpenSSL==22.0.0 urllib3==1.22 request
+        python3.9 -m pip install -U iotedgedev pyOpenSSL==22.0.0 urllib3==1.22 requests
       displayName: 'Command Line Script'
     - task: AzureIoTEdge@2
       inputs:
